# checkmarks

./: pyproject.toml
checkmarks/: cli.py
