[project]
name = "checkmarks"
version = "0.1.1"
description = "A simple CLI for tracking progress with markdown checklists"
authors = [
  { name = "menisadi", email = "menisadi@gmail.com" }
]

readme = "README.md"

license = { file = "LICENSE" }

keywords = ["cli", "markdown", "checklists"]

dependencies = []

[project.scripts]
checkmarks = "checkmarks.cli:main"

[project.urls]
"Homepage" = "https://github.com/menisadi/checkmarks"
"Issues" = "https://github.com/menisadi/checkmarks/issues"
